// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component SheetAddTopic SheetAddTopic renders correctly 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  supportedOrientations={
    Array [
      "portrait",
      "portrait-upside-down",
      "landscape",
      "landscape-left",
      "landscape-right",
    ]
  }
  transparent={true}
  visible={false}
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "#00000077",
            "flex": 1,
          },
          undefined,
        ],
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
          "opacity": 1,
        }
      }
    />
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "backgroundColor": "#fff",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "height": "auto",
          "overflow": "hidden",
          "transform": Array [
            Object {
              "translateX": 0,
            },
            Object {
              "translateY": 0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ccc",
                "borderRadius": 5,
                "height": 5,
                "margin": 10,
                "width": 35,
              },
              Object {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingBottom": 38,
            "paddingHorizontal": 20,
            "paddingTop": 20,
          }
        }
      >
        <RCTScrollView
          keyboardShouldPersistTaps="always"
          showsVerticalScrollIndicator={false}
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#000000",
                  "fontFamily": "Inter-Semi-bold",
                  "fontSize": 18,
                  "fontWeight": "bold",
                }
              }
            >
              Add topics
            </Text>
            <View
              style={
                Object {
                  "backgroundColor": "#F5F5F5",
                  "borderRadius": 8,
                  "marginTop": 12,
                  "minHeight": 150,
                  "paddingHorizontal": 16,
                  "paddingTop": 17,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontFamily": "Inter-Regular",
                      "fontSize": 12,
                      "fontWeight": "400",
                    }
                  }
                >
                  #
                </Text>
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  blurOnSubmit={false}
                  collapsable={false}
                  onChangeText={[Function]}
                  onGestureHandlerEvent={[Function]}
                  onGestureHandlerStateChange={[Function]}
                  onKeyPress={[Function]}
                  onSubmitEditing={[Function]}
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "paddingStart": 0,
                      "width": "100%",
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "#828282",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 10,
                  "marginBottom": 21,
                  "marginTop": 5,
                }
              }
            >
              Hit space to start a new topic. Add up to 5 topics.
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#00ADB5",
                  "borderRadius": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "paddingHorizontal": 25,
                  "paddingVertical": 12,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Semi-bold",
                    "fontSize": 18,
                  }
                }
              >
                Save
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`component SheetAddTopic SheetAddTopic snapshot 1`] = `
<RBSheet
  animationType="none"
  closeDuration={200}
  closeOnDragDown={true}
  closeOnPressBack={true}
  closeOnPressMask={true}
  customStyles={
    Object {
      "container": Object {
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "height": "auto",
      },
      "draggableIcon": Object {
        "backgroundColor": "#E0E0E0",
      },
    }
  }
  dragFromTopOnly={false}
  height={260}
  keyboardAvoidingViewEnabled={false}
  minClosingHeight={0}
  onClose={[Function]}
  onOpen={[Function]}
  openDuration={300}
>
  <View
    style={
      Object {
        "paddingBottom": 38,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <ScrollView
      keyboardShouldPersistTaps="always"
      showsVerticalScrollIndicator={false}
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontFamily": "Inter-Semi-bold",
            "fontSize": 18,
            "fontWeight": "bold",
          }
        }
      >
        Add topics
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#F5F5F5",
            "borderRadius": 8,
            "marginTop": 12,
            "minHeight": 150,
            "paddingHorizontal": 16,
            "paddingTop": 17,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "flexWrap": "wrap",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "fontWeight": "400",
              }
            }
          >
            #
          </Text>
          <Component
            autoCapitalize="none"
            blurOnSubmit={false}
            onChangeText={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            style={
              Object {
                "paddingStart": 0,
                "width": "100%",
              }
            }
            value=""
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Regular",
            "fontSize": 10,
            "marginBottom": 21,
            "marginTop": 5,
          }
        }
      >
        Hit space to start a new topic. Add up to 5 topics.
      </Text>
      <Btn
        onPress={[Function]}
      >
        Save
      </Btn>
    </ScrollView>
  </View>
</RBSheet>
`;
